add basic html structure to all html files, including boostrap CDN

--- a/list.html
+++ b/list.html
@@ -20,6 +20,22 @@
 	</head>
 
 	<body>
+		<div class="container">
+			<div class="row card">
+				<div class="card-title">
+					Meng Cha
+				</div>
+				<div class="card-stock-num">
+					42
+				</div>
+				
+			</div>
+		</div>
 
+		<div class="container">
+			<div class="row">
+				go to map view
+			</div>
+		</div>
     </body>
 </html>
