--- a/map.html
+++ b/map.html
@@ -13,6 +13,8 @@
 	    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	    <meta http-equiv="content-language" content="en-us">
 
+		<!-- set site icon <link rel="site icon" href=""> -->
+
 	    <!-- bootstrap CDN -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -20,6 +22,16 @@
 	</head>
 
 	<body>
+		<div class="container">
+			<div class="row">
+				map
+			</div>
+		</div>
 
+		<div class="container">
+			<div class="row">
+				go to list view
+			</div>
+		</div>
     </body>
 </html>
