--- a/biz-create-biz.html
+++ b/biz-create-biz.html
@@ -21,5 +21,19 @@
 
 	<body>
 
+
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBLRX9CWoCS5B3lggGB21GOs5K7kjj3tQs",
+    authDomain: "waimai-915103765.firebaseapp.com",
+    databaseURL: "https://waimai-915103765.firebaseio.com",
+    projectId: "waimai-915103765",
+    storageBucket: "",
+    messagingSenderId: "816034032111"
+  };
+  firebase.initializeApp(config);
+</script>
     </body>
 </html>
