--- a/list.html
+++ b/list.html
@@ -28,7 +28,7 @@
 				<div class="card-stock-num">
 					42
 				</div>
-				
+
 			</div>
 		</div>
 
@@ -37,5 +37,20 @@
 				go to map view
 			</div>
 		</div>
+
+
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBLRX9CWoCS5B3lggGB21GOs5K7kjj3tQs",
+    authDomain: "waimai-915103765.firebaseapp.com",
+    databaseURL: "https://waimai-915103765.firebaseio.com",
+    projectId: "waimai-915103765",
+    storageBucket: "",
+    messagingSenderId: "816034032111"
+  };
+  firebase.initializeApp(config);
+</script>
     </body>
 </html>
