add costumer related htmls mock

--- a/list.html
+++ b/list.html
@@ -22,19 +22,33 @@
 	<body>
 		<div class="container">
 			<div class="row card">
-				<div class="card-title">
-					Meng Cha
+				<div class="card-header">
+				Meng Cha
 				</div>
-				<div class="card-stock-num">
-					42
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">42 left</li>
+				<li class="list-group-item open-until">Until 12:45pm</li>
+				<li class="list-group-item location">Cyert</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row card restaurant-card">
+				<div class="card-header">
+				Fu Cun
 				</div>
-				
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">16 left</li>
+				<li class="list-group-item open-until">Until 14:10pm</li>
+				<li class="list-group-item location">Hunt</li>
+				</ul>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
-				go to map view
+				<a class="btn btn-primary" href="map.html" role="button">Go to map view</a>
 			</div>
 		</div>
     </body>
