--- a/map.html
+++ b/map.html
@@ -24,13 +24,13 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				map
+				map placeholder
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
-				go to list view
+				<a class="btn btn-primary" href="list.html" role="button">Go to list view</a>
 			</div>
 		</div>
     </body>
