--- a/meal-view.html
+++ b/meal-view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-		<title>Wai Mai</title>
+		<title>Meal Name - Restaurant Name</title>
 
 		<meta name="keywords" content="chinese food, CMU, wai mai" />
 		<meta name="author" content="Wai Mai Co">
@@ -20,6 +20,19 @@
 	</head>
 
 	<body>
+
+		<div class="container">
+			<div class="row card meal-card">
+				<div class="card-header">
+				Meal A
+				</div>
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">20 left</li>
+				<li class="list-group-item meal-price">$10</li>
+				<li class="list-group-item meal-info">Soup/fresh watermelon juice included</li>
+				</ul>
+			</div>
+		</div>
 
     </body>
 </html>
