--- a/restaurant-view.html
+++ b/restaurant-view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-		<title>Wai Mai</title>
+		<title>Restaurant Name</title>
 
 		<meta name="keywords" content="chinese food, CMU, wai mai" />
 		<meta name="author" content="Wai Mai Co">
@@ -20,6 +20,65 @@
 	</head>
 
 	<body>
+		<div class="container">
+			<div class="row restaurant-name">
+				Meng Cha
+			</div>
+		</div>
+		<div class="container">
+			<div class="row restaurant-stock">
+				42 Left
+			</div>
+		</div>
+		<div class="container">
+			<div class="row restaurant-open-until">
+				until 12:45pm
+			</div>
+		</div>
+		<div class="container">
+			<div class="row restaurant-location">
+				Cyert
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row card meal-card">
+				<div class="card-header">
+				Meal A
+				</div>
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">22 left</li>
+				<li class="list-group-item meal-price">$8</li>
+				<li class="list-group-item meal-info">Soup/fresh watermelon juice included</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row card meal-card">
+				<div class="card-header">
+				Meal B
+				</div>
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">20 left</li>
+				<li class="list-group-item meal-price">$10</li>
+				<li class="list-group-item meal-info">Soup/fresh watermelon juice included</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row card meal-card">
+				<div class="card-header">
+				Meal C
+				</div>
+				<ul class="list-group list-group-flush">
+				<li class="list-group-item stock-num">0 left</li>
+				<li class="list-group-item meal-price">$11</li>
+				<li class="list-group-item meal-info">Soup/fresh watermelon juice included</li>
+				</ul>
+			</div>
+		</div>
 
     </body>
 </html>
