redirect index to login.html and add content to biz-overview.html

--- a/biz-overview.html
+++ b/biz-overview.html
@@ -20,6 +20,53 @@
     </head>
 
     <body>
+        <div class="container">
+            <div class="row welcome">
+                Hello, Meng Cha!
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-1">
+                Mon, 2 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-2">
+                Tue, 3 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-3">
+                Wed, 4 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-4">
+                Thur, 5 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-5">
+                Fri, 6 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-6">
+                Sat, 7 Feb
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row card day-card" id="day-7">
+                Sun, 8 Feb
+            </div>
+        </div>
 
     </body>
 </html>
