--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <script> window.location.replace('./list.html') </script>
+        <script> window.location.replace('./login.html') </script>
     </head>
     <body></body>
 </html>
