--- a/biz-login.html
+++ b/biz-login.html
@@ -22,6 +22,7 @@
     </head>
 
     <body>
+      <script src='./scripts/user.js'></script>
 
         <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
         <script>
