--- a/biz-update-meal.html
+++ b/biz-update-meal.html
@@ -23,6 +23,64 @@
 
     <body>
 
+        <form>
+            <div class="form-group">
+                <label for="open-time">Estimated Open Time</label>
+                <input type="time" class="form-control" id="open-time" placeholder="12:00:00">
+            </div>
+            <div class="form-group">
+                <label for="open-location">Estimated Location</label>
+                <input type="text" class="form-control" id="open-location" placeholder="E.g. cyert">
+            </div>
+            <div class="form-group">
+                <label for="meal-name-A">Meal A Name</label>
+                <input type="text" class="form-control" id="meal-name-A" placeholder="E.g. Meal A">
+            </div>
+            <div class="form-group">
+                <label for="stock-A">Total Stock for Meal A</label>
+                <input type="number" class="form-control" id="stock-A" placeholder="50">
+            </div>
+            <div class="form-group">
+                <label for="price-A">Price for Meal A</label>
+                <input type="number" class="form-control" id="price-A" placeholder="8">
+            </div>
+            <div class="form-group">
+                <label for="meal-description-A">Description for Meal A</label>
+                <textarea class="form-control" id="meal-description-A" rows="3"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="meal-name-B">Meal B Name</label>
+                <input type="text" class="form-control" id="meal-name-B" placeholder="E.g. Meal B">
+            </div>
+            <div class="form-group">
+                <label for="stock-B">Total Stock for Meal B</label>
+                <input type="number" class="form-control" id="stock-B" placeholder="50">
+            </div>
+            <div class="form-group">
+                <label for="price-B">Price for Meal B</label>
+                <input type="number" class="form-control" id="price-B" placeholder="8">
+            </div>
+            <div class="form-group">
+                <label for="meal-description-B">Description for Meal B</label>
+                <textarea class="form-control" id="meal-description-B" rows="3"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="meal-name-C">Meal C Name</label>
+                <input type="text" class="form-control" id="meal-name-C" placeholder="E.g. Meal C">
+            </div>
+            <div class="form-group">
+                <label for="stock-C">Total Stock for Meal C</label>
+                <input type="number" class="form-control" id="stock-C" placeholder="50">
+            </div>
+            <div class="form-group">
+                <label for="price-C">Price for Meal C</label>
+                <input type="number" class="form-control" id="price-C" placeholder="8">
+            </div>
+            <div class="form-group">
+                <label for="meal-description-C">Description for Meal C</label>
+                <textarea class="form-control" id="meal-description-C" rows="3"></textarea>
+            </div>
+        </form>
 
         <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
         <script>
