replace map with placeholder

--- a/selling.html
+++ b/selling.html
@@ -13,13 +13,32 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta http-equiv="content-language" content="en-us">
 
+        <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+        <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" charset="UTF-8" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+
         <!-- bootstrap CDN -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        
 
     </head>
 
     <body>
+        <script>
+            var update_location_buttom = document.getElementById('updateLocationButtom');
+            update_location_buttom.onclick = update_location;
 
+            function update_location(){
+              var input = localStorage.user;
+              localStorage.setItem("server", input.value);
+              var storedValue = localStorage.getItem("server");
+            }
+        </script>
+        
+        <button name = "Update Location" type="submit" value="Submit">Update My Location</button>
+        </form>
     </body>
+
 </html>
