not sure but try to store the user's location when click on update button, on the selling page

--- a/map.html
+++ b/map.html
@@ -30,11 +30,6 @@
 
 	</head>
 	<body>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> 9377ff3e239aa8b8ee66d2496225b0c2f259e38b
 		<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
 		<script>
 		  // Initialize Firebase
@@ -51,7 +46,7 @@
 
 		<div class="container">
 			<div class="row">
-					<div style="width: 400px; height: 500px" id="mapContainer" class="map"></div>
+					<div style="width: 500px; height: 800px" id="mapContainer" class="map"></div>
 						<script>
 							var mapContainer = document.getElementById('map-container');
 							
@@ -97,7 +92,9 @@
 							   icon: new H.map.Icon(iconUrl, iconOptions)
 							};
 
-							var marker = new H.map.Marker(HUNTcoordinates, markerOptions);
+							var carCoordinates = window.localstorage.user.location;
+
+							var marker = new H.map.Marker(carCoordinates, markerOptions);
 							map.addObject(marker);
 						</script>
 			</div>
