--- a/map.html
+++ b/map.html
@@ -92,10 +92,14 @@
 							   icon: new H.map.Icon(iconUrl, iconOptions)
 							};
 
-							var carCoordinates = get_loc(window.localstorage.user);
+							var userList = all_biz();
 
-							var marker = new H.map.Marker(carCoordinates, markerOptions);
-							map.addObject(marker);
+							for (var i = userList.length - 1; i >= 0; i--) {
+								var carCoordinates = get_loc(userList[i]);
+								var marker = new H.map.Marker(carCoordinates, markerOptions);
+								map.addObject(marker);
+							}
+							
 						</script>
 			</div>
 		</div>
