--- a/map.html
+++ b/map.html
@@ -94,13 +94,14 @@
 							   icon: new H.map.Icon(iconUrl, iconOptions)
 							};
 
-							var userList = all_biz();
-
-							for (var i = userList.length - 1; i >= 0; i--) {
-								var carCoordinates = get_loc(userList[i]);
-								var marker = new H.map.Marker(carCoordinates, markerOptions);
-								map.addObject(marker);
-							}
+							all_biz().then(list => {
+								list.forEach(biz => {
+									get_loc(biz.username).then(carCoordinates => {
+										var marker = new H.map.Marker(carCoordinates, markerOptions);
+										map.addObject(marker);
+									})
+								})
+							})
 
 						</script>
 			</div>
