biz-overview link

--- a/biz-overview.html
+++ b/biz-overview.html
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id='r1'>
             <div class="row card day-card" id="day-1">
                 Mon, 2 Feb
             </div>
@@ -68,5 +68,10 @@
             </div>
         </div>
 
+      <script>
+        document.getElementById('r1').addEventListener('click', () => {
+          window.location.replace('./biz-update-meal.html')
+        })
+      </script>
     </body>
 </html>
