--- a/biz-update-meal.html
+++ b/biz-update-meal.html
@@ -80,6 +80,7 @@
                 <label for="meal-description-C">Description for Meal C</label>
                 <textarea class="form-control" id="meal-description-C" rows="3"></textarea>
             </div>
+            <button id='submit' class='btn btn-primary'>Submit</button>
         </form>
 
         <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
@@ -95,5 +96,6 @@
           };
           firebase.initializeApp(config);
         </script>
+        <script src='./scripts/biz-meal.js'></script>
     </body>
 </html>
