add icons to all pages

--- a/find-your-location.html
+++ b/find-your-location.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Browser Location</title>
+        <link rel="site icon" href="waimai.png">
+
     </head>
     <body>
         <script src="https://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
