--- a/list.html
+++ b/list.html
@@ -21,6 +21,7 @@
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
 
         <link rel="stylesheet" href="css/list.css" type="text/css">
+        <link rel="site icon" href="waimai.png">
 
     </head>
 
