--- a/login.html
+++ b/login.html
@@ -19,6 +19,8 @@
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
 
+        <link rel="site icon" href="waimai.png">
+
     </head>
 
     <body>
