--- a/selling.html
+++ b/selling.html
@@ -26,6 +26,8 @@
     </head>
 
     <body>
+        <script src='./scripts/db.js'></script>
+        <script src='./scripts/selling.js'></script>
         <div class="container">
             <div class="row">
                 <button onclick = "store_location();">Update My Location </button>
@@ -37,8 +39,11 @@
                             "app_code": "bxRlLLx05eqG3_9St7H9pw"
                         });
                         var geocoder = platform.getGeocodingService();
+                        console.log(window.localstorage.user);
                         if(navigator.geolocation){
-                                navigator.geolocation.getCurrentPosition(position => 
+                                console.log(window.localstorage.user);
+                                navigator.geolocation.getCurrentPosition
+                                (position => 
                                     set_loc(window.localstorage.user, position));
                         } else{
                             console.error("Geolocation is not supported by this browser!");
@@ -51,18 +56,7 @@
                 <button onclick = "sellA();"> Sell Meal A </button>
                 <script>
                     function sellA(){
-                        var userInfo = user_info(window.localstorage.user);
-
-                    }
-                </script>
-            </div>
-
-            <div class="row">
-                <button onclick = "sellB();"> Sell Meal B </button>
-                <script>
-                    function sellB(){
-                        var userInfo = user_info(window.localstorage.user);
-
+                        meal_minus_one(window.localstorage.user);
                     }
                 </script>
             </div>
