--- a/biz-overview.html
+++ b/biz-overview.html
@@ -18,54 +18,79 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link rel="site icon" href="waimai.png">
 
+<style>
+body {
+  padding-left: 10%;
+  padding-right: 10%;
+  --primary-color: #ff922b;
+  --primary-color-dark: #e8590c;
+}
+.card {
+  height: 50px;
+  margin: 20px 0;
+  background-color: var(--primary-color);
+  border: none;
+  color: white;
+  padding: 10px;
+}
+#r1 .card {
+  background-color: var(--primary-color-dark);
+}
+.welcome {
+  font-size: 150%;
+  padding: 20px;
+  padding-left: 0;
+  margin: 50px 0 0;
+}
+</style>
     </head>
 
     <body>
         <div class="container">
             <div class="row welcome">
-                Hello, Meng Cha!
+              Hello,&nbsp;<span id='username'>萌茶</span>!
             </div>
         </div>
 
         <div class="container" id='r1'>
             <div class="row card day-card" id="day-1">
-                Mon, 2 Feb
+                Mon 2 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-2">
-                Tue, 3 Feb
+                Tue 3 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-3">
-                Wed, 4 Feb
+                Wed 4 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-4">
-                Thur, 5 Feb
+                Thur 5 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-5">
-                Fri, 6 Feb
+                Fri 6 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-6">
-                Sat, 7 Feb
+                Sat 7 Feb
             </div>
         </div>
 
         <div class="container">
             <div class="row card day-card" id="day-7">
-                Sun, 8 Feb
+                Sun 8 Feb
             </div>
         </div>
 
