--- a/login.html
+++ b/login.html
@@ -21,14 +21,38 @@
 
         <link rel="site icon" href="waimai.png">
 
+<style>
+body {
+  padding-left: 10%;
+  padding-right: 10%;
+  --primary-color: #ff922b;
+  --primary-color-dark: #e8590c;
+}
+h1 {
+  margin: 100px 0;
+  width: 62%;
+  border-bottom: 6.2px solid var(--primary-color);
+}
+label {
+  width: 100%;
+  text-align: center;
+}
+.btn {
+  background-color: var(--primary-color);
+  border: none;
+}
+.btn:hover {
+  background-color: var(--primary-color-dark);
+}
+</style>
     </head>
 
     <body>
+      <h1>Wai Mai</h1>
         <form>
             <div class="form-group">
                 <label for="exampleInputUsername">Username</label>
                 <input type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp" placeholder="Enter username">
-                <small id="emailHelp" class="form-text text-muted">Your username is the one you created when you registered with us.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword">Password</label>
