--- a/login.html
+++ b/login.html
@@ -42,6 +42,7 @@
         .btn {
           background-color: var(--primary-color);
           border: none;
+          margin-top: 30px;
         }
         .btn:hover {
           background-color: var(--primary-color-dark);
