--- a/biz-overview.html
+++ b/biz-overview.html
@@ -26,6 +26,7 @@ body {
   --primary-color-dark: #e8590c;
 }
 .card {
+  font-size: 120%;
   height: 50px;
   margin: 20px 0;
   background-color: var(--primary-color);
