--- a/biz-update-meal.html
+++ b/biz-update-meal.html
@@ -40,6 +40,7 @@ h3 {
 .btn {
   background-color: var(--primary-color);
   border: none;
+    font-size: 120%;
 }
 .btn:hover {
   background-color: var(--primary-color-dark);
