--- a/restaurant-view.html
+++ b/restaurant-view.html
@@ -16,11 +16,41 @@
         <!-- bootstrap CDN -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        
+
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
         <link rel="site icon" href="waimai.png">
 
+<style>
+body {
+  padding: 50px 6.2%;
+  --primary-color: #ff922b;
+  --primary-color-dark: #e8590c;
+}
+.btn {
+  margin-top: 30px;
+  border: none;
+  background-color: var(--primary-color);
+  color: white;
+}
+.btn:hover, .card:hover {
+  background-color: var(--primary-color-dark);
+}
+.card {
+  padding: 10px 20px;
+  border: none;
+  background-color: var(--primary-color);
+  color: white;
+  margin-top: 30px;
+}
+#header {
+  font-size: 150%;
+  padding: 0 0 20px;
+}
+.card-header {
+  background-color: var(--primary-color-dark);
+}
+</style>
     </head>
 
     <body>
@@ -38,25 +68,27 @@
           firebase.initializeApp(config);
         </script>
 
-        <div class="container">
-            <div class="row restaurant-name">
-                Meng Cha
-            </div>
-        </div>
-        <div class="container">
-            <div class="row restaurant-stock">
-                42 Left
-            </div>
-        </div>
-        <div class="container">
-            <div class="row restaurant-open-until">
-                until 12:45pm
-            </div>
-        </div>
-        <div class="container">
-            <div class="row restaurant-location">
-                Cyert
-            </div>
+        <div id='header'>
+                                <div class="container">
+                                    <div class="row restaurant-name">
+                                        Meng Cha
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row restaurant-stock">
+                                        42 Left
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row restaurant-open-until">
+                                        until 12:45pm
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row restaurant-location">
+                                        Cyert
+                                    </div>
+                                </div>
         </div>
 
         <div class="container">
