--- a/selling.html
+++ b/selling.html
@@ -81,6 +81,10 @@
                 <button onclick = "sellA();"> Sell Meal A </button>
             </div>
 
+            <div class="row">
+                <button onclick = "sellB();"> Sell Meal B </button>
+            </div>
+
         </form>
     </body>
 
