--- a/map.html
+++ b/map.html
@@ -84,7 +84,7 @@
 					var behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
 
 					// Marker with custom icon
-					var iconUrl = './mark-location.png';
+					var iconUrl = './bowl.png';
 
 					var iconOptions = {
 					  size: new H.math.Size(27, 27),
